<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="305dp"
        android:layout_height="50dp"
        android:layout_marginTop="52dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/name" />

    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginTop="204dp"
        android:layout_marginEnd="-1dp"
        android:background="#8AD8D8D8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginTop="172dp"
        android:text="@string/set_up_your_new_training"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="214dp"
        android:text="@string/step_1"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="252dp"
        android:text="@string/choose_your_training"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.162"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnStrength"
        style="@style/DefaultButton"
        android:layout_width="281dp"
        android:layout_height="81dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="320dp"
        android:text="@string/strength"
        android:textDirection="locale"
        android:textSize="16sp"
        app:cornerRadius="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/btnHIIT"
        style="@style/DefaultButton"
        android:layout_width="281dp"
        android:layout_height="81dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="520dp"
        android:layout_marginBottom="128dp"
        android:text="@string/hiit"
        android:textDirection="locale"
        android:textSize="16sp"
        app:cornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/btnEndurance"
        style="@style/DefaultButton"
        android:layout_width="281dp"
        android:layout_height="81dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="420dp"
        android:layout_marginBottom="227dp"
        android:text="@string/endurance"
        android:textDirection="locale"
        android:textSize="16sp"
        app:cornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeWidth="2dp" />


</androidx.constraintlayout.widget.ConstraintLayout>