<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/sketchtrain_logo"
    android:gravity="center|top"
    android:orientation="vertical">

    <Space
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:contentDescription="TODO" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="286dp"
        android:layout_height="159dp"
        app:srcCompat="@drawable/app_icon_title" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="54dp" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textAlignment="textStart" />


    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />


    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textAlignment="textStart" />


    <Space
        android:layout_width="match_parent"
        android:layout_height="13dp" />

    <Button
        android:id="@+id/btnConn"
        style="@style/DefaultButton"
        android:layout_width="256dp"
        android:layout_height="wrap_content"

        android:focusableInTouchMode="false"
        android:text="@string/log_in"
        android:textDirection="locale"
        app:cornerRadius="5dp"
        app:strokeWidth="2dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <TextView
        android:id="@+id/btnPassForg"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textAlignment="center"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnGoogle"
            style="@style/DefaultButton"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:focusableInTouchMode="false"
            android:text="Sign Up/Sign In with Google"
            android:textDirection="locale"
            app:cornerRadius="5dp"
            app:strokeWidth="2dp" />
        <Button
            android:id="@+id/btnFacebook"
            style="@style/DefaultButton"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:focusableInTouchMode="false"
            android:text="Sign Up/Sign In with Facebook"
            android:textDirection="locale"
            app:cornerRadius="5dp"
            app:strokeWidth="2dp" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="26dp" />
    </LinearLayout>

</LinearLayout>