<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="305dp"
        android:layout_height="50dp"
        android:layout_marginTop="52dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/name" />

    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginEnd="-1dp"
        android:background="#8AD8D8D8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etTrainName" />


    <TextView
        android:id="@+id/etTrainName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="140dp"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/set_up_your_new_training"
        />


    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/choose_category"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.005"
        app:layout_constraintStart_toStartOf="@+id/etTrainName"
        app:layout_constraintTop_toBottomOf="@+id/etTrainName" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnEx"
        android:layout_width="275dp"
        android:layout_height="81dp"
        android:layout_marginTop="356dp"
        android:background="@drawable/button_background"
        android:text="@string/hipetrophy"
        android:textDirection="locale"
        android:textSize="16sp"
        app:cornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.008"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeWidth="2dp" />

    <ImageButton
        android:id="@+id/infoHiper"
        android:layout_width="33dp"
        android:layout_height="34dp"
        android:background="#00FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/btnEx"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.325"
        app:layout_constraintStart_toEndOf="@+id/btnEx"
        app:layout_constraintTop_toTopOf="@+id/btnEx"
        app:layout_constraintVertical_bias="0.553"
        app:srcCompat="@drawable/badge_info" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnPower"
        android:layout_width="275dp"
        android:layout_height="81dp"
        android:layout_marginTop="492dp"
        android:background="@drawable/button_background"
        android:text="@string/powerlifting"
        android:textDirection="locale"
        android:textSize="16sp"
        app:cornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="@+id/btnEx"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnEx"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeWidth="2dp" />

    <ImageButton
        android:id="@+id/infoPower"
        android:layout_width="33dp"
        android:layout_height="34dp"
        android:background="#00FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/btnPower"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.325"
        app:layout_constraintStart_toEndOf="@+id/btnEx"
        app:layout_constraintTop_toTopOf="@+id/btnPower"
        app:layout_constraintVertical_bias="0.574"
        app:srcCompat="@drawable/badge_info" />



</androidx.constraintlayout.widget.ConstraintLayout>