<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="305dp"
        android:layout_height="50dp"
        android:layout_marginTop="52dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/name" />

    <TextView
        android:id="@+id/etTrainName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="140dp"
        android:text="@string/set_up_your_new_training"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginEnd="-1dp"
        android:background="#8AD8D8D8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etTrainName" />


    <LinearLayout
        android:layout_width="414dp"
        android:layout_height="0dp"
        android:gravity="center|center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/separator">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/choose_your_training"
                android:textSize="28sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.13"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnStrength"
                android:layout_width="275dp"
                android:layout_height="100dp"
                android:background="@drawable/button_background"
                android:text="@string/strength"
                android:textDirection="locale"
                android:textSize="16sp"
                app:cornerRadius="5dp"
                app:layout_constraintBottom_toTopOf="@+id/btnPower"
                app:layout_constraintEnd_toEndOf="@+id/textView5"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                app:strokeWidth="2dp" />

            <ImageButton
                android:id="@+id/infoStrength"
                android:layout_width="33dp"
                android:layout_height="34dp"
                android:background="#00FFFFFF"
                app:layout_constraintBottom_toBottomOf="@+id/btnStrength"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btnStrength"
                app:layout_constraintTop_toTopOf="@+id/btnStrength"
                app:srcCompat="@drawable/badge_info" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnPower"
                android:layout_width="275dp"
                android:layout_height="100dp"
                android:background="@drawable/button_background"
                android:text="@string/endurance"
                android:textDirection="locale"
                android:textSize="16sp"
                app:cornerRadius="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/btnStrength"
                app:layout_constraintStart_toStartOf="@+id/btnStrength"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                app:strokeWidth="2dp" />

            <ImageButton
                android:id="@+id/infoEndurance"
                android:layout_width="47dp"
                android:layout_height="47dp"
                android:background="#00FFFFFF"
                app:layout_constraintBottom_toBottomOf="@+id/btnPower"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btnPower"
                app:layout_constraintTop_toTopOf="@+id/btnPower"
                app:srcCompat="@drawable/badge_info" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnHIIT"
                android:layout_width="275dp"
                android:layout_height="100dp"
                android:background="@drawable/button_background"
                android:text="@string/hiit"
                android:textDirection="locale"
                android:textSize="16sp"
                app:cornerRadius="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/btnPower"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/btnPower"
                app:layout_constraintTop_toBottomOf="@+id/btnPower"
                app:strokeWidth="2dp" />

            <ImageButton
                android:id="@+id/infoHIIT"
                android:layout_width="33dp"
                android:layout_height="34dp"
                android:background="#00FFFFFF"
                app:layout_constraintBottom_toBottomOf="@+id/btnHIIT"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btnHIIT"
                app:layout_constraintTop_toTopOf="@+id/btnHIIT"
                app:srcCompat="@drawable/badge_info" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>